[project]
name = "ralph-py-cli"
version = "0.4.2"
description = "A CLI application for running Claude Code iteratively on design documents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ryan Wiley" }
]
keywords = ["cli", "claude", "ai", "automation", "tui", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=2.3.3",
    "pip-audit>=2.10.0",
    "playwright>=1.57.0",
    "textual>=0.50.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/rdubwiley09/ralph-py-cli"
Repository = "https://github.com/rdubwiley09/ralph-py-cli"
Issues = "https://github.com/rdubwiley09/ralph-py-cli/issues"

[project.scripts]
ralph = "ralph_py_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_py_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
]
